--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css');
+@import url('fonts/TT Supermolot Neue/TT Supermolot Neue.css');
+
 * {
     padding: 0;
     margin: 0;
@@ -45,6 +48,7 @@ img {
     align-items: center;
     position: relative;
     z-index: 999;
+    padding: 10px 0;
 }
 
 .logo-nav .logo {
@@ -82,8 +86,12 @@ img {
     display: none;
 }
 
-header {
+#home header {
     background: url(assets/banner1.png);
+    height: 800px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 
@@ -367,7 +375,7 @@ img.white-series {
 
 
 
-/* Banners */
+/* Home Banners */
 section.banner {
     background-repeat: no-repeat;
     background-position: center;
@@ -425,6 +433,143 @@ section.banner a::after {
 
 
 
+
+
+/* Whey Page */
+#whey header {
+    background: url('assets/whey-page-banner-without-logo.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+}
+
+#whey header nav li a {
+    color: #fff;
+}
+.whey-hero-section{
+    height: calc(100vh - 141px);
+    display: flex;
+    align-items: center;
+}
+.whey-hero-section .banner-text h1, .whey-banner1 h1, .whey-banner2 h1, .whey-banner3 h1 {
+    color: #fff;
+    font-size: 75px;
+    font-family: 'Gimme Danger';
+    margin-bottom: 20px;
+    line-height: 100px;
+}
+
+.whey-hero-section .banner-text p, .whey-banner1 p {
+    font-size: 30px;
+    font-weight: 800;
+    color: #CD8200;
+    margin: 0;
+    line-height: 1;
+    font-family: 'TT Supermolot Neue';
+}
+
+.whey-hero-section .banner-text .flavor-input {
+    background: #DDDDDD;
+    border: 8px solid #846220;
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    margin-top: 50px;
+    padding: 25px;
+}
+.whey-hero-section .input-box select{
+    background-color: #fff;
+    color: #333;
+    font-weight: 800;
+    height: 50px;
+    margin: 0;
+    font-size: 20px;
+}
+.whey-hero-section .flavor-input .buy-btn a{
+    padding: 0 20px;
+    font-size: 20px;
+    display: block;
+    height: 50px;
+    color: #fff;
+    background: #846220;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;    
+}
+.whey-hero-section .whey-details{
+    font-family: 'TT Supermolot Neue';
+    font-size: 25px;
+    color: #fff;
+    font-weight: 700;
+    margin-top: 50px;
+
+} 
+.whey-banner1, .whey-banner2 ,.whey-banner3{
+    height: 100vh;
+    background: url(assets/whey-page-banner1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+}
+.whey-banner1 h1, .whey-banner2 h1, .whey-banner3 h1{
+    color: #fff;
+    font-size: 50px;
+    word-spacing: 20px;
+    line-height: 100px;
+}
+.whey-banner1 h3, .whey-banner2 h3{
+    color: #fff;
+    font-size: 45px;
+    line-height: 1;
+    margin: 50px 0;
+    font-weight: 700;
+}
+.whey-banner1 p, .whey-banner2 p, .whey-banner3 p{
+    color: #333;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.5;
+    font-family: 'TT Supermolot Neue';
+}
+.whey-banner2{
+    background-image: url(assets/whey-page-banner2.png);
+}
+.whey-banner2 .whey-banner2-text{
+    max-width: 500px;
+}
+.whey-banner2 h1{
+    color: #000;
+}
+.whey-banner2 h3{
+    color: #000;
+    margin: 30px 0;
+}
+.whey-banner3{
+    background-image: url(assets/whey-page-banner4.png);
+}
+.whey-banner3 p{
+    color: #fff;
+}
+.whey-banner3 h1{
+    font-size: 35px;
+    line-height: 60px;
+    margin-top: 50px;
+}
+
+
+
+
+
+
+
+
+
+
+
 /* Footer */
 footer {
     padding: 50px 0;
@@ -448,6 +593,146 @@ footer ul li {
 .social-links ul {
     width: 150px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* CONTACT PAGE */
+#contact header {
+    background: url('assets/contact-bg.png');
+    height: 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#contact h1 {
+    font-size: 50px;
+    font-weight: 800;
+    font-family: 'TT Supermolot Neue';
+    color: #fff;
+}
+
+#contact nav li a {
+    color: #fff;
+}
+
+.contact-form {
+    background: url('assets/contact-bd-texture.png');
+}
+
+
+.contact-wrapper .contact-text {
+    padding: 80px 60px 30px
+}
+
+.contact-wrapper .contact-text .address-wrapper {
+    border-bottom: solid 2px rgba(102, 102, 102, 0.2);
+    margin-bottom: 20px;
+    padding-bottom: 20px
+}
+
+.contact-wrapper .contact-text .address-wrapper .aw-col1 {
+    float: left;
+    width: 30%;
+    padding-left: 15px;
+    padding-right: 15px
+}
+
+.contact-wrapper .contact-text .address-wrapper .aw-col1 img {
+    max-width: 100%
+}
+
+.contact-wrapper .contact-text .address-wrapper .aw-col2 {
+    float: left;
+    width: 70%;
+    padding-left: 15px;
+    padding-right: 15px
+}
+
+.contact-wrapper .contact-text h4 {
+    font-size: 36px;
+    line-height: 36px;
+    color: #333;
+    margin: 0 0 20px;
+    text-shadow: 0 3px 0 #fff
+}
+
+.contact-wrapper .contact-text p {
+    font-size: 15px;
+    line-height: 18px
+}
+
+.contact-wrapper .contact-text p a {
+    font-weight: 600;
+    color: #333
+}
+
+.contact-wrapper .contact-text form label {
+    font-size: 24px;
+    line-height: 24px;
+    color: #000;
+    margin: 20px 0 20px;
+    display: block
+}
+
+.contact-wrapper .contact-text form input[type="text"],
+.contact-wrapper .contact-text form input[type="email"],
+.contact-wrapper .contact-text form textarea {
+    display: block;
+    border: solid 3px #967537;
+    box-shadow: 0 0 0 4px #d4d4d4;
+    width: 100%;
+    padding: 10px 16px;
+    outline: 0
+}
+
+.contact-wrapper .contact-text form textarea {
+    height: 200px
+}
+
+.contact-wrapper .contact-text form input[type="submit"] {
+    background: #967537;
+    font-size: 24px;
+    line-height: 24px;
+    color: #000;
+    padding: 14px 16px;
+    display: block;
+    width: 100%;
+    color: #fff;
+    border: 0;
+    margin-top: 20px;
+    cursor: pointer;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out
+}
+
+.contact-wrapper .contact-text form input[type="submit"]:hover {
+    -webkit-box-shadow: 0 6px 30px 2px rgba(237, 174, 27, 0.3);
+    -moz-box-shadow: 0 6px 30px 2px rgba(237, 174, 27, 0.3);
+    box-shadow: 0 6px 30px 2px rgba(237, 174, 27, 0.3);
+}
+
+.contact-wrapper .contact-text form .form-block {
+    margin-bottom: 20px
+}
+
+
+
 
 
 
@@ -499,6 +784,10 @@ footer ul li {
         font-size: 14px;
         line-height: 1.3;
     }
+
+    header {
+        height: 600px;
+    }
 }
 
 
@@ -528,52 +817,25 @@ footer ul li {
     }
 }
 
-@media only screen and (max-width: 767px) {
-    .flavor-banner .bg-banner {
-        background-image: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(assets/flavor-banner2-mob.png);
-    }
-}
-
-
-
-@media only screen and (max-width: 576px) {
-    .logo-nav .logo {
-        width: 120px;
+@media only screen and (max-width: 768px) {
+    #home header {
+        background-image: url(assets/banner1-mob.png);
     }
 
-    .logo-nav {
-        padding: 10px 0;
-    }
-
-    .hamburger svg {
-        width: 30px;
-    }
-
-    .header-banner .for-desktop {
-        display: none;
-    }
-
-    .header-banner .for-mob {
-        display: block;
-    }
 
     .whey-banner {
-        background: url(assets/whey-banner1-mob.png);
+        background-image: url(assets/whey-banner1-mob.png);
     }
 
     .mass-gain-banner {
-        background: url(assets/mass-gainer-banner-mob.png);
+        background-image: url(assets/mass-gainer-banner-mob.png);
     }
 
     .isolate-banner {
-        background: url(assets/isolate-banner1-mob.png);
+        background-image: url(assets/isolate-banner1-mob.png);
     }
 
-    section.banner .row {
-        flex-direction: column;
-    }
-
-    .banner-text {
+    .banner .banner-text {
         margin-top: 420px;
     }
 
@@ -584,8 +846,57 @@ footer ul li {
     section.banner h4 {
         font-size: 50px;
     }
+
     section.banner h1 {
         font-size: 26px;
+    }
+    #whey header {
+        background-image: url('assets/whey-page-banner-without-logo-mob.png');
+    }
+    .whey-hero-section .banner-text h1, .whey-banner1 h1, .whey-banner2 h1, .whey-banner3 h1 {
+        font-size: 40px;
+        margin-bottom: 10px;
+        line-height: 75px;
+    }
+    .whey-hero-section .banner-text p, .whey-banner1 p {
+        font-size: 20px;
+        line-height: 1.3;
+    }
+    .whey-hero-section .banner-text .flavor-input {
+        border: 5px solid #846220;
+        padding: 10px;
+        margin-top: 10px;
+        gap: 1rem;
+    }
+    .whey-hero-section .input-box select {
+        height: 40px;
+        font-size: 16px;
+        width: 150px;
+    }.whey-hero-section .flavor-input .buy-btn a {
+        font-size: 16px;
+        height: 40px;
+        padding: 0 15px;
+        font-family: 'TT Supermolot Neue';
+    }
+    .whey-hero-section{
+        align-items: flex-start;
+    }
+    .whey-hero-section .whey-details {
+        margin-top: 10px;
+        font-size: 18px;
+    }
+}
+
+
+
+@media only screen and (max-width: 576px) {
+    .logo-nav .logo {
+        width: 120px;
+    }
+
+
+    .hamburger svg {
+        width: 30px;
     }
 
 }
