--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    transition: all linear .2s;
 }
 
 a,
@@ -18,6 +19,7 @@ ul,
 li {
     list-style: none;
     padding: 0;
+    margin: 0;
 }
 
 img {
@@ -92,6 +94,31 @@ img {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+}
+header{
+    padding-top: 141px;
+}
+.web-header{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    left: 0;
+    z-index: 999;
+}
+header.white .logo-nav nav li a{
+    color: #fff;
+}
+header.dark .logo-nav nav li a{
+    color: #000;
+}
+.dark.active .web-header{
+     background-color: #fff;
+}
+.white.active .web-header{
+     background-color: #111;
+}
+.active .web-header .logo{
+    width: 150px;
 }
 
 
@@ -448,10 +475,6 @@ section.banner a::after {
     height: 100vh;
 }
 
-#whey header nav li a {
-    color: #fff;
-}
-
 .whey-hero-section {
     height: calc(100vh - 141px);
     display: flex;
@@ -654,10 +677,6 @@ footer ul li {
     font-size: 50px;
     font-weight: 800;
     font-family: 'TT Supermolot Neue';
-    color: #fff;
-}
-
-#contact nav li a {
     color: #fff;
 }
 
